// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders non-undefined values as options 1`] = `
.emotion-30 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-29 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

.emotion-6 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 0;
}

.emotion-7 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-7:active {
  background-color: rgba(128,128,128,0.2);
}

.emotion-5 {
  fill: #808080;
}

.emotion-5 > * {
  fill: #808080;
}

.emotion-18 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 1;
  fill: #0696d7;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-2-label"
  aria-owns={null}
  className="emotion-30"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-2-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-2"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-2-label"
    className="emotion-29"
    id="downshift-2-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-2-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        foo
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-2-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        1
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-2-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        true
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-2-item-3"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={true}
      className="emotion-7"
      disabled={false}
      id="downshift-2-item-4"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        
      </span>
      <div
        className="emotion-18"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-2-item-5"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-2-item-6"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        [object Object]
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-2-item-7"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        [object Map]
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with a controlled value 1`] = `
.emotion-15 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-14 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

.emotion-6 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 0;
}

.emotion-7 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-7:active {
  background-color: rgba(128,128,128,0.2);
}

.emotion-5 {
  fill: #808080;
}

.emotion-5 > * {
  fill: #808080;
}

.emotion-12 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 1;
  fill: #0696d7;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-9-label"
  aria-owns={null}
  className="emotion-15"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-9-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-9"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value="foo"
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-9-label"
    className="emotion-14"
    id="downshift-9-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-9-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        bar
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-9-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        baz
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={true}
      className="emotion-7"
      disabled={false}
      id="downshift-9-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        foo
      </span>
      <div
        className="emotion-12"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with an ID 1`] = `
.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-5 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="whoaBuddy-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="whoaBuddy-label"
        autoComplete="off"
        className="emotion-0"
        id="whoaBuddy"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="whoaBuddy-label"
    className="emotion-5"
    id="whoaBuddy-menu"
    role="listbox"
  />
</div>
`;

exports[`Dropdown renders with className prop 1`] = `
.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-5 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-11-label"
  aria-owns={null}
  className="emotion-6 custom-class-1 custom-class-2"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2 custom-class-1-input-wrapper custom-class-2-input-wrapper"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-11-label"
        autoComplete="off"
        className="emotion-0 custom-class-1-input-wrapper__input custom-class-2-input-wrapper__input"
        id="downshift-11"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1 custom-class-1-input-wrapper__halo custom-class-2-input-wrapper__halo"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-11-label"
    className="emotion-5 custom-class-1-menu-wrapper custom-class-2-menu-wrapper"
    id="downshift-11-menu"
    role="listbox"
  />
</div>
`;

exports[`Dropdown renders with custom option formatting 1`] = `
.emotion-15 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-14 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

.emotion-6 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 0;
}

.emotion-7 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-7:active {
  background-color: rgba(128,128,128,0.2);
}

.emotion-5 {
  fill: #808080;
}

.emotion-5 > * {
  fill: #808080;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-1-label"
  aria-owns={null}
  className="emotion-15"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-1-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-1-label"
    className="emotion-14"
    id="downshift-1-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-1-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        Bar
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-1-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        Baz
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-1-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        Foo
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with custom option render function 1`] = `
.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-5 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-3-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-3-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-3"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-3-label"
    className="emotion-5"
    id="downshift-3-menu"
    role="listbox"
  >
    <div>
      RENDERS
    </div>
    <div>
      WITH
    </div>
    <div>
      CUSTOM
    </div>
    <div>
      OPTION
    </div>
    <div>
      RENDER
    </div>
    <div>
      FUNCTION
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with default value 1`] = `
.emotion-15 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-14 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

.emotion-6 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 0;
}

.emotion-7 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-7:active {
  background-color: rgba(128,128,128,0.2);
}

.emotion-5 {
  fill: #808080;
}

.emotion-5 > * {
  fill: #808080;
}

.emotion-12 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 1;
  fill: #0696d7;
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-7-label"
  aria-owns={null}
  className="emotion-15"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-7-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-7"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value="foo"
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-7-label"
    className="emotion-14"
    id="downshift-7-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-7-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        bar
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-7-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        baz
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={true}
      className="emotion-7"
      disabled={false}
      id="downshift-7-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        foo
      </span>
      <div
        className="emotion-12"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with multiple selection 1`] = `
.emotion-15 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-14 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

.emotion-6 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 0;
}

.emotion-7 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-7:active {
  background-color: rgba(128,128,128,0.2);
}

.emotion-5 {
  fill: #808080;
}

.emotion-5 > * {
  fill: #808080;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-style: italic;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-8-label"
  aria-owns={null}
  className="emotion-15"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-8-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-8"
        multiple={true}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-8-label"
    className="emotion-14"
    id="downshift-8-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-8-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        bar
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-8-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        baz
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-8-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        foo
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with multiple selection and a controlled value 1`] = `
.emotion-15 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-14 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

.emotion-9 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 0;
}

.emotion-7 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  min-height: 18px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  cursor: pointer;
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  background-color: transparent;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-7:active {
  background-color: rgba(128,128,128,0.2);
}

.emotion-5 {
  fill: #808080;
}

.emotion-5 > * {
  fill: #808080;
}

.emotion-6 {
  height: 18px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 > svg * {
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  opacity: 1;
  fill: #0696d7;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-style: italic;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-10-label"
  aria-owns={null}
  className="emotion-15"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-10-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-10"
        multiple={true}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value="foo, bar"
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-10-label"
    className="emotion-14"
    id="downshift-10-menu"
    role="listbox"
  >
    <div
      aria-selected={true}
      className="emotion-7"
      disabled={false}
      id="downshift-10-item-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        bar
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={false}
      className="emotion-7"
      disabled={false}
      id="downshift-10-item-1"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        baz
      </span>
      <div
        className="emotion-9"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
    <div
      aria-selected={true}
      className="emotion-7"
      disabled={false}
      id="downshift-10-item-2"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span>
        foo
      </span>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="16px"
          width="16px"
        >
          <path
            d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific and general option render function 1`] = `
.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-5 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-5-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-5-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-5"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-5-label"
    className="emotion-5"
    id="downshift-5-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div>
      GREEN
    </div>
    <div>
      BLUE
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific render function 1`] = `
.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-5 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-4-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-4-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-4"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-4-label"
    className="emotion-5"
    id="downshift-4-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#00ff00",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Green
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#0000ff",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Blue
      </p>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific, general and format rendering 1`] = `
.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-5 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-6-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-6-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-6"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-6-label"
    className="emotion-5"
    id="downshift-6-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div>
      GREEN
    </div>
    <div>
      BLUE
    </div>
  </div>
</div>
`;

exports[`Dropdown renders without props 1`] = `
.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-4 {
  position: relative;
}

.emotion-2 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-width: 1px;
  border-bottom-color: rgba(128,128,128,0.35);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.emotion-1 {
  position: absolute;
  top: calc(100% + 1px);
  left: -1px;
  right: 0;
  width: calc(100% + 2px);
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: calc(24px + 0px);
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.2);
}

.emotion-3 {
  fill: rgba(102,102,102,0.7);
}

.emotion-3 > * {
  fill: rgba(102,102,102,0.7);
}

.emotion-5 {
  display: none;
  position: absolute;
  width: 100%;
  max-height: 360px;
  top: 36px;
  overflow: auto;
  z-index: 9996;
  box-sizing: border-box;
  border-top: none;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}

<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-0-label"
  aria-owns={null}
  className="emotion-6"
  role="combobox"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-0-label"
        autoComplete="off"
        className="emotion-0"
        id="downshift-0"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        readOnly={true}
        value=""
      />
      <div
        className="emotion-1"
      />
    </div>
    <svg
      className="emotion-3"
      color="rgba(102, 102, 102, 0.7)"
      height="10px"
      style={
        Object {
          "opacity": 1,
          "pointerEvents": "none",
          "position": "absolute",
          "right": "0",
          "top": "50%",
          "transform": "translateY(-50%)",
          "transition": "transform 0.3s, color 0.3s",
        }
      }
      width="10px"
    >
      <path
        d="M8.71 3.22a.75.75 0 00-1.06 0L5 5.87 2.35 3.22a.75.75 0 00-1.06 0 .74.74 0 000 1.06l3.36 3.36a.5.5 0 00.7 0l3.36-3.36a.74.74 0 000-1.06z"
      />
    </svg>
  </div>
  <div
    aria-labelledby="downshift-0-label"
    className="emotion-5"
    id="downshift-0-menu"
    role="listbox"
  />
</div>
`;
